// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk3 {
  cursor: pointer;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet e1cntjzo1"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            Label 
          </legend>
          <div
            class="cache-gw33n2-Stack efjor120"
          >
            <div
              aria-disabled="false"
              class="e1cntjzo2 cache-15f4ca1-CheckboxContainer-StyledCheckbox e18zyixk1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="cache-bd1zro-CheckboxInput e18zyixk2"
                id=":r1:"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="cache-1acemqq-StyledIcon e18zyixk4"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="cache-10ivylf-Stack efjor120"
              >
                <div
                  class="cache-17l4vsh-Stack efjor120"
                >
                  <label
                    class="cache-9k0c1e-StyledLabel e18zyixk3"
                    for=":r1:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="e1cntjzo2 cache-15f4ca1-CheckboxContainer-StyledCheckbox e18zyixk1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="cache-bd1zro-CheckboxInput e18zyixk2"
                id=":r3:"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="cache-1acemqq-StyledIcon e18zyixk4"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="cache-10ivylf-Stack efjor120"
              >
                <div
                  class="cache-17l4vsh-Stack efjor120"
                >
                  <label
                    class="cache-9k0c1e-StyledLabel e18zyixk3"
                    for=":r3:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-c9vmsg-StyledIcon-sizeStyles-StyledRequiredIcon {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.cache-c9vmsg-StyledIcon-sizeStyles-StyledRequiredIcon .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk3 {
  cursor: pointer;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-15f4ca1-CheckboxContainer-StyledCheckbox label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet e1cntjzo1"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            CheckboxGroupField events 
            <svg
              class="e1cntjzo0 cache-c9vmsg-StyledIcon-sizeStyles-StyledRequiredIcon e17h3kg70"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </legend>
          <div
            class="cache-gw33n2-Stack efjor120"
          >
            <div
              aria-disabled="false"
              class="e1cntjzo2 cache-15f4ca1-CheckboxContainer-StyledCheckbox e18zyixk1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="cache-bd1zro-CheckboxInput e18zyixk2"
                id=":r6:"
                name="test.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="cache-1acemqq-StyledIcon e18zyixk4"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="cache-10ivylf-Stack efjor120"
              >
                <div
                  class="cache-17l4vsh-Stack efjor120"
                >
                  <label
                    class="cache-9k0c1e-StyledLabel e18zyixk3"
                    for=":r6:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="e1cntjzo2 cache-15f4ca1-CheckboxContainer-StyledCheckbox e18zyixk1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="cache-bd1zro-CheckboxInput e18zyixk2"
                id=":r8:"
                name="test.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="cache-1acemqq-StyledIcon e18zyixk4"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="cache-10ivylf-Stack efjor120"
              >
                <div
                  class="cache-17l4vsh-Stack efjor120"
                >
                  <label
                    class="cache-9k0c1e-StyledLabel e18zyixk3"
                    for=":r8:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
